terraform/modules/network/security-groups.tf
###############################################
# Default Application Security Group
###############################################

resource "aws_security_group" "application" {

  name        = "${local.name_prefix}-application"
  description = "Application Security Group"

  vpc_id = aws_vpc.this.id

  ingress {

    description = "Allow HTTPS traffic from within the VPC"

    from_port = 443
    to_port   = 443
    protocol  = "tcp"

    cidr_blocks = [
      var.vpc_cidr
    ]
  }

  egress {

    description = "Allow HTTPS outbound traffic"

    from_port = 443
    to_port   = 443
    protocol  = "tcp"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }

  tags = merge(
    local.common_tags,
    {
      Name = "${local.name_prefix}-application"
    }
  )
}
